src/parse/snapshots/script_lang__parse__test__number_literal-2.snap
---
source: src/parse/test.rs
assertion_line: 41
expression: ast

---
Literal(
    Number(
        10.0,
        Span {
            start: 0,
            end: 0,
        },
    ),
)
